--- a/POM.xml
+++ b/POM.xml
@@ -5,8 +5,16 @@
 		http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>clinic.programmming</groupId>
-  <artifactId>example</artifactId>
+  <artifactId>maven-quick-start</artifactId>
   <version>1.0</version>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.12.0</version>
+    </dependency>
+  </dependencies>
   
   <build>
     <plugins>
